display book info in book card

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="p-20 bg-blue">
         <h1>Library</h1>
         
-        <div class="library-grid gap-10 bg-brown p-10">
+        <div id="library" class="library-grid gap-10 bg-brown p-10">
             <div class="book-card">
               <p class="card-title">Title</p>
               <p class="card-author">Author</p>
@@ -18,7 +18,7 @@
                 <label for="read">Read</label>
                 <input type="checkbox" id="read" name="read"> 
               </div>
-              <button>Delete Book</button>
+              <button class="card-button">Delete Book</button>
             </div>
         </div>
     </body>
