new book button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         <script src="library.js"></script>
     </head>
     <body class="p-20 bg-blue">
-        <h1>Library</h1>
+        <div class="flex justify-space-between align-center">
+            <h1>Library</h1>
+            <button class="new-book-button">New book</button>
+        </div>
         
-        <div id="library" class="library-grid gap-10 bg-brown p-10">
-            
+        <div id="library" class="library-grid gap-10 bg-brown p-10 mtop-8"> 
         </div>
     </body>
 </html>
