--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <button id="new-book-button" class="new-book-button">New book</button>
         </div>
 
-        <dialog id="new-book-modal">
+        <dialog id="new-book-modal" class="center-window">
             <form>
                 <div>
                     <label>
@@ -25,7 +25,7 @@
                     <button id="confirmBtn" value="default">Confirm</button>
                 </div>
             </form>
-          </dialog>
+        </dialog>
         
         <div id="library" class="library-grid gap-10 bg-brown p-10 mtop-8"> 
         </div>
