--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             id="new-book-modal" 
             class="center-window window-half-width border-radius bg-brown p-20"
         >
-            <form class="h-100 flex flex-col gap-10">
+            <form id="new-book-form" class="h-100 flex flex-col gap-10">
                 <h2>Add new book</h2>
 
                 <div class="form-grid p-10">
