--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                     
                 </div>
                 <div class="mtop-auto self-end">
-                    <button id="cancel-button" class="form-button">Cancel</button>
+                    <button type="button" id="cancel-button" class="form-button">Cancel</button>
                     <button 
-                        type="submit" 
                         id="add-new-book-button"
                         class="form-button"
                     >
